<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:gravity="center"
		android:orientation="vertical"
		android:background="@color/title_bg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">

		<TextView
			android:textSize="@dimen/title_text_size"
			android:textColor="@color/text_color"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/app_setting"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:background="@color/main_bg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="20.0">

		<LinearLayout
			android:orientation="vertical"
			android:background="@color/white"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12.0dip">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_clearhistory"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/clearhistory"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/ic_delete"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

				<LinearLayout
					android:id="@+id/setting_feedback"
					android:layout_height="40dip"
					android:layout_width="fill_parent"
					android:orientation="horizontal"
					android:gravity="center_vertical">

					<TextView
						android:layout_height="match_parent"
						android:text="@string/feedback"
						android:layout_width="wrap_content"
						android:layout_weight="30.0"
						android:textColor="@color/black"
						android:textSize="@dimen/setting_text_size"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"/>

					<ImageView
						android:layout_height="30.0dip"
						android:layout_width="30.0dip"
						android:src="@drawable/ic_android"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_backgroundchoose"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/setting_backgroundchoose"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/ic_android"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:layout_height="0.8dip"
					android:background="@color/linear_text"
					android:layout_width="match_parent"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:background="@color/white"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12.0dip">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_contentme"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/contentme"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/contentme"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_joinqqgroup"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/joingroup"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/joinqqgroup"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_about"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/about"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/about"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_gitee"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/giteeabout"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/ic_gitee"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

				<LinearLayout
					android:gravity="center_vertical"
					android:orientation="horizontal"
					android:id="@+id/setting_share"
					android:layout_width="fill_parent"
					android:layout_height="40.0dip">

					<TextView
						android:textSize="@dimen/setting_text_size"
						android:textColor="@color/black"
						android:gravity="center_vertical"
						android:paddingLeft="6.0dip"
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:text="@string/shareapp"
						android:layout_weight="30.0"/>

					<ImageView
						android:layout_width="30.0dip"
						android:layout_height="30.0dip"
						android:src="@drawable/ic_share"
						android:layout_weight="1.0"/>

				</LinearLayout>

				<View
					android:background="@color/linear_text"
					android:layout_width="fill_parent"
					android:layout_height="0.8dip"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:gravity="bottom"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<LinearLayout
				android:gravity="center"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<TextView
					android:textSize="@dimen/setting_copy_text_size"
					android:textColor="@color/copy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/copych"/>

				<TextView
					android:textSize="@dimen/setting_copy_text_size"
					android:textColor="@color/copy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/copyen"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

