<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:gravity="center"
		android:orientation="vertical"
		android:background="@color/title_bg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">

		<TextView
			android:textSize="@dimen/title_text_size"
			android:textColor="@color/text_color"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/app_oneself"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:background="@color/main_bg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="26">

		<LinearLayout
			android:orientation="vertical"
			android:id="@+id/activity_oneself_user"
			android:background="@color/white"
			android:layout_width="fill_parent"
			android:layout_height="64.0dip"
			android:layout_marginTop="12.0dip">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="2.0">

				<ImageView
					android:id="@+id/oneself_userheadphoto"
					android:layout_width="54.0dip"
					android:layout_height="54.0dip"
					android:layout_margin="4.0dip"
					android:src="@drawable/head_default"
					android:scaleType="fitCenter"/>

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">

					<TextView
						android:textSize="@dimen/oneself_username_text_size"
						android:textStyle="bold"
						android:textColor="@color/black"
						android:gravity="bottom"
						android:id="@+id/oneself_username"
						android:paddingLeft="6.0dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/user_name"
						android:layout_weight="1.0"/>

					<TextView
						android:textSize="@dimen/oneself_userj_textsize"
						android:textColor="@color/black"
						android:id="@+id/oneself_usersign"
						android:paddingLeft="6.0dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/user_j"
						android:layout_weight="1.0"/>

				</LinearLayout>

			</LinearLayout>

			<View
				android:background="@color/linear_text"
				android:layout_width="fill_parent"
				android:layout_height="0.8000001dip"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:background="@color/white"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12.0dip">

			<LinearLayout
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:id="@+id/oneself_setting"
				android:layout_width="fill_parent"
				android:layout_height="40.0dip">

				<TextView
					android:textSize="@dimen/oneself_text_size"
					android:textColor="@color/black"
					android:gravity="center_vertical"
					android:paddingLeft="6.0dip"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:text="@string/app_setting"
					android:layout_weight="30.0"/>

				<ImageView
					android:layout_width="20.0dip"
					android:layout_height="20.0dip"
					android:src="@drawable/ic_arrow"
					android:layout_weight="1.0"/>

			</LinearLayout>

			<View
				android:background="@color/linear_text"
				android:layout_width="fill_parent"
				android:layout_height="0.8000001dip"/>

			<LinearLayout
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:id="@+id/oneself_thanks"
				android:layout_width="fill_parent"
				android:layout_height="40.0dip">

				<TextView
					android:textSize="@dimen/oneself_text_size"
					android:textColor="@color/black"
					android:gravity="center_vertical"
					android:paddingLeft="6.0dip"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:text="@string/app_thanks"
					android:layout_weight="30.0"/>

				<ImageView
					android:layout_width="20.0dip"
					android:layout_height="20.0dip"
					android:src="@drawable/ic_arrow"
					android:layout_weight="1.0"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:id="@+id/oneself_exit"
			android:background="@color/white"
			android:layout_width="fill_parent"
			android:layout_height="40.0dip"
			android:layout_marginTop="12.0dip">

			<LinearLayout
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

				<TextView
					android:textSize="@dimen/oneself_text_size"
					android:textColor="@color/black"
					android:gravity="center_vertical"
					android:paddingLeft="6.0dip"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:text="@string/exit"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

